8243848: Shenandoah: Windows build fails after JDK-8239786

Reviewed-by: rkennke, stuefe