src/hotspot/share/gc/shenandoah/shenandoahHeap.cpp
@@ -372,7 +372,7 @@ jint ShenandoahHeap::initialize() {
   }
 
   _monitoring_support = new ShenandoahMonitoringSupport(this);
-  _phase_timings = new ShenandoahPhaseTimings();
+  _phase_timings = new ShenandoahPhaseTimings(max_workers());
   ShenandoahStringDedup::initialize();
   ShenandoahCodeRoots::initialize();
 
